src/objects/c2g__CustomFormAssignment__c.object
<CustomObject>
    <description>Determines which Custom Form to display for a given Accounting document.</description>
    <fields>
        <fullName>c2g__Config__c</fullName>
        <label>Configuration</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>c2g__CustomFormLayout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Custom Form</label>
        <referenceTo>c2g__CustomFormLayout__c</referenceTo>
        <relationshipLabel>Custom Form Assignments</relationshipLabel>
        <relationshipName>Custom_Form_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Mode__c</fullName>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Edit</fullName>
                    <default>true</default>
                    <label>Edit</label>
                </value>
                <value>
                    <fullName>View</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__ObjectType__c</fullName>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Custom Form Assignment</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CFA-{00000}</displayFormat>
        <label>Custom Form Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Form Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>